--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "schdulr",
+  "name": "bootcampAPI",
   "version": "0.0.1",
-  "homepage": "https://github.com/Spinaldash/schdulr",
+  "homepage": "https://github.com/Spinaldash/bootcampAPI",
   "author": "Michael Perez <mjosephvp@gmail.com>",
   "license": "BSD",
   "engines": {
@@ -14,5 +14,19 @@
     "start": "node index.js",
     "test": "lab -v -c -t 100 -L -n eslint -e test",
     "coverage": "lab -s -r lcov | coveralls"
+  },
+  "dependencies": {
+    "blipp": "^2.1.3",
+    "chai": "^3.0.0",
+    "coveralls": "^2.11.2",
+    "good": "^6.1.4",
+    "good-console": "^5.0.2",
+    "hapi": "^8.6.1",
+    "hapi-auth-jwt": "^2.1.2",
+    "hoek": "^2.14.0",
+    "joi": "^6.4.3",
+    "lab": "^5.10.0",
+    "mongoose": "^4.0.5",
+    "sinon": "^1.14.1"
   }
 }
